2011-11-07 mmichaud <michael.michaud@free.fr>
    * Fixed AutoAssignPlugin [ID 3434648] and changed slightly its semantic
      unparsable number returns null instead of 0 for Integer or Double type

2011-11-06 sstein <sstein@geo.uzh.ch>
    * Fixed the SaveDatasetAs bug for MacOSX [ID 3428076].
      Now the input is accepted and, hence, a file is written.
      Testing fix on Windows on 7.Nov.2011 was positive. So I removed the 
      MacOSX specific function call for "SaveDatasetAsFile" that was used 
      as work around.
      Note, the solution itself is done by replacing Non-OSX workaround code
      for the Java bug 4528663 in FileDataSourceQueryChooser only. Changes in 
      other classes were for testing and code readability.
      
2011-11-05 sstein <sstein@geo.uzh.ch>
    * Added icons by Peppe for the following functions: 
      EditSelectedFeaturePlugIn, DeleteSelectedItemsPlugIN, 
      CombineSelectedFeaturesPlugIn, ExplodeSelectedFeaturesPlugIn,
      PasteItemsPlugIn, ReplicateSelectedItemsPlugIn,
      CopySelectedItemsPlugIn, PasteItemsAtPlugIn 
    
2011-11-03 mmichaud <michael.michaud@free.fr>
    * Fixed bug id 3413805 by changing validateTree() to validate() in 
      LayerNameRenderer (don't understand why, though)
    * Fixed SaveDatasetsPlugin (throws a nullPointerException is the project
      includes a Datastore)
    * Small fix in SaveLayersWithoutDataSourcesPlugIn (change layerName.png
      to layerName.jml whe saving the layer as jml along with the project 

2011-10-31 mmichaud <michael.michaud@free.fr>
    * New plugin com.vividsolutions.jump.plugin.edit.NoderPlugIn
      to replace LineNoderPlugIn (see also request 2333409). The new PlugIn :
      - preserve attributes
      - can process LineStrings AND polygons
      - can node OR split geometries
      - can interpolate z values on intersections
      
2011-10-29 mmichaud <michael.michaud@free.fr>
    * Add a limit parameter (max number of features) in the addDataStore PlugIn